WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310034
[Site Isolation] Fix EnhancedSecurityPolicies.HttpsOnlyExplicitlyBypassedWithHttpRedirect
https://bugs.webkit.org/show_bug.cgi?id=310034
Summary
[Site Isolation] Fix EnhancedSecurityPolicies.HttpsOnlyExplicitlyBypassedWith...
Sihui Liu
Reported
2026-03-16 10:19:36 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-16 10:21:09 PDT
<
rdar://problem/172673206
>
Sihui Liu
Comment 2
2026-03-16 10:34:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60707
EWS
Comment 3
2026-03-16 17:22:13 PDT
Committed
309361@main
(0014731cb355): <
https://commits.webkit.org/309361@main
> Reviewed commits have been landed. Closing PR #60707 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug